k8s-manifests/setup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: setup
  name: setup
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: setup
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/elk: "true"
        io.kompose.service: setup
    spec:
      containers:
        - env:
            - name: BEATS_SYSTEM_PASSWORD
            - name: ELASTIC_PASSWORD
            - name: FILEBEAT_INTERNAL_PASSWORD
            - name: HEARTBEAT_INTERNAL_PASSWORD
            - name: KIBANA_SYSTEM_PASSWORD
            - name: LOGSTASH_INTERNAL_PASSWORD
            - name: METRICBEAT_INTERNAL_PASSWORD
            - name: MONITORING_INTERNAL_PASSWORD
          image: setup
          name: setup
          resources: {}
          volumeMounts:
            - mountPath: /entrypoint.sh
              name: setup-claim0
              readOnly: true
            - mountPath: /helpers.sh
              name: setup-claim1
              readOnly: true
            - mountPath: /roles
              name: setup-claim2
              readOnly: true
            - mountPath: /state
              name: setup
      restartPolicy: Always
      volumes:
        - name: setup-claim0
          persistentVolumeClaim:
            claimName: setup-claim0
            readOnly: true
        - name: setup-claim1
          persistentVolumeClaim:
            claimName: setup-claim1
            readOnly: true
        - name: setup-claim2
          persistentVolumeClaim:
            claimName: setup-claim2
            readOnly: true
        - name: setup
          persistentVolumeClaim:
            claimName: setup
status: {}
