k8s-manifests/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  ports:
    - name: "5044"
      port: 5044
      targetPort: 5044
    - name: "50000"
      port: 50000
      targetPort: 50000
    - name: 50000-udp
      port: 50000
      protocol: UDP
      targetPort: 50000
    - name: "9600"
      port: 9600
      targetPort: 9600
  selector:
    io.kompose.service: logstash
status:
  loadBalancer: {}
