k8s-manifests/elk-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: elk
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/elk: "true"
  podSelector:
    matchLabels:
      io.kompose.network/elk: "true"
